@@ -14,6 +14,8 @@
   - Fedora Linux
   - ...
 
+- OpenTRAC support ?  (UI, PID=0x77)
+
 - bidirectional relaying capability with areal filters ??
   (that would make this a full-blown aprsd / aprsdigi replacement..)
 
